# DigiSteel-YOLO

./: .gitignore  00_START_HERE.md  AUTOMATION_INSTRUCTIONS.md  BRANDING_COMPLETE.md  BRANDING_GUIDE.md  CHECKLIST.md  CODE_WIKI.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DOCTOR_TASK_COMPLETE_GUIDE.md  FINAL_SUMMARY.md  GITHUB_LIVE.md  GITHUB_SETUP.md  LICENSE  PROJECT_GUIDE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TEAM_COLLABORATION.md  activate_env.bat  pyproject.toml  requirements.txt  run_all.sh  setup.sh  setup_env.bat  setup_team.bat
.github/workflows/: release.yml  test.yml
.trae/documents/: PRD_DigiSteel_FactorySkin.md  TECHARCH_DigiSteel_FactorySkin.md
configs/: gc10_det.yaml  neu_det.yaml  yolov11n_a2_a3.yaml  yolov11n_a2_ghostconv.yaml  yolov11n_a3_innerwiou.yaml  yolov11n_baseline.yaml  yolov11n_ghostconv.yaml
configs/data/: neu_det.yaml  neu_det_clahe.yaml  neu_det_clahe4.yaml
configs/models/: digisteel.yaml  (+3 more)
digisteel/: __init__.py
docs/: ANALYSIS-2026-06-23.md  DigiSteel-YOLO-Final-Report.md  DigiSteel-YOLO-Progress-Report.md  FORENSIC-ANALYSIS-90-percent-papers.md  Reference_Papers_Summary.md  session-log-2026-06-02.md
doctor_task/: 01_create_subset_lite.py  05_cnn_baseline_model_lite.py  06_train_baseline_lite_no_preprocess.py  07_train_baseline_lite_with_preprocess.py  08_ablation_study_lite.py  COLAB_GUIDE.md  DigiSteel_CNN_Baseline_Colab.ipynb  LIGHTWEIGHT_CPU_OPTIMIZED.md  README.md  run_full_pipeline.sh
draft/: week4_4a_fresh_baseline_original.ipynb
evals/: ablation_study.md  digisteel_results.json  exp_5a_digisteel_v4_dafe.json  exp_5b_tta_results.json  fresh_baseline_results.json  fresh_baseline_train_status.json  robustness_baseline_v2.csv  robustness_digisteel_v2.csv  week3_a1_results.json  week3_a2_results.json  week4_4a_results.json  week4_4a_summary.json  week4_4a_train_status.json  yolov11n_baseline_results.md
factory skin plan/: FACTORY_SKIN_PLAN.md
frontend/: tailwind.config.js  vite.config.ts
notebooks/: DigiSteel_YOLO_Colab.ipynb  DigiSteel_v2_Colab.ipynb  README.md  ablation_study.ipynb  auto_ablation.ipynb  digisteel_complete.ipynb  digisteel_model.ipynb  exp_5a_digisteel_v4_dafe.ipynb  exp_5b_tta_eval.ipynb  test_gpu.ipynb  transfer_learning_dafe_comparison.ipynb  transfer_learning_fresh_baseline.ipynb  transfer_learning_yolov11n.ipynb  week2_ablation.ipynb  week3_phase_a1_config_fix.ipynb  week3_phase_a2_arch_fix.ipynb  week4_fresh_baseline.ipynb  yolov11n_baseline_v1.ipynb  yolov11n_baseline_v2.ipynb  yolov26_neudet.ipynb  yolov26_transfer_learning.ipynb
scripts/: analyze_dataset.py  auto_ablation.py  auto_ablation_full.py  compare_models.py  eval_all.py  eval_robustness.py  evaluate.py  export_onnx.py  generate_pdf.py  push_notebook.sh  run_ablation.sh  run_robustness_eval.py  sanity_check.py  test_training.py  train.py  train_baseline.py  train_dafe_variants.py  train_digisteel.py
tests/: conftest.py  test_ema.py  test_ghost_conv.py  test_inner_wiou.py  test_integration.py  test_perturbations.py  test_trainer.py  test_wfca.py
tools/: download_datasets.sh  prepare_datasets.py  split_dataset.py  voc_to_yolo.py
web app/: package-lock.json  package.json
wiki/: API.md  Architecture.md  Dependencies.md  Home.md  Modules.md  Running.md
wiki_site/: index.html
(+52 files in other folders)
